# libnotify-sys

./: Cargo.toml  README.md  build.rs
src/: bindings.rs  lib.rs
